Fixed spaces handling in JBossManagerConfiguration class